added new files
added new files

--- a/cs50x.html
+++ b/cs50x.html
@@ -11,6 +11,7 @@
   <div class="container">
     <h2><a href="https://courses.edx.org/courses/course-v1:HarvardX+CS50+X/course/">Course | CS50 | edX</a></h2>
 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/3oFAJtFE8YU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       <h3>Lectures</h3>
       <table class="table table-striped table-sm w-50">
         <tr>
