--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@ CS50, Fall 2018
       <h1>CS50 Courses on edX</h1>
         <p>Need quick access to the lectures and projects for your CS50 course on edX?  Here are some quick
         links to help you out.</p>
-      <h4><a href="cs50x.html">CS50x</a> - Introduction to Computer Science</h4>
+        <h3>Introductory</h3>
+        <h4><a href="cs50t.html">CS50T (cs50.edx.org/technology)</a> - CS50's Understanding Technology</h4>
+        <p>This is CS50’s introduction to technology for students who don’t (yet!) consider themselves computer persons.</p>
+         <h4><a href="cs50b.html">CS50B (cs50.edx.org/business)</a> - CS50's Computer Science for Business Professionals</h4>
+        <p>This is CS50’s introduction to computer science for business professionals, designed for managers, product managers, founders, and decision-makers more generally.</p>
+      <h4><a href="cs50x.html">CS50x (cs50.edx.org)</a> - CS50's Introduction to Computer Science</h4>
       <p>An introduction to the intellectual enterprises of computer science and the art of programming.</p>
-      <h4><a href="cs50w.html">CS50W</a> - Web Programming with Python and JavaScript</h4>
+      <h4><a href="cs50ap.html">CS50AP (cs50.edx.org/ap)</a> - CS50's AP® Computer Science Principles </h4>
+      <p>This is CS50 AP, Harvard University's introduction to the intellectual enterprises of computer science and the art of programming for students in high school, which satisfies the College Board's new AP CS Principles curriculum framework.</p>
+      <h3>Intermediate</h3>
+      <h4><a href="cs50w.html">CS50W (cs50.edx.org/web)</a> - CS50's Web Programming with Python and JavaScript</h4>
             <p>This course picks up where CS50 leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Flask, Django, and Bootstrap.</p>
 
-        <h4><a href="cs50g.html">CS50G</a> - Introduction to Game Development</h4>
+        <h4><a href="cs50g.html">CS50G (cs50.edx.org/games)</a> - CS50's Introduction to Game Development</h4>
         <p>Learn about the development of 2D and 3D interactive games in this hands-on course, as you explore the design of games such as Super Mario Bros., Pokémon, Angry Birds, and more.</p>
 
-        <h4><a href="cs50m.html">CS50M</a> - Mobile App Development with React Native</h4>
+        <h4><a href="cs50m.html">CS50M (cs50.edx.org/mobile)</a> - CS50's Mobile App Development with React Native</h4>
         <p>Learn about mobile app development with React Native, a popular framework maintained by Facebook that enables cross-platform native apps using JavaScript without Java or Swift.</p>
         </div>
     </body>
