update cs50ap  (add problem links)
Added problems and links to AP

--- a/cs50ap.html
+++ b/cs50ap.html
@@ -10,15 +10,89 @@
 <body>
   <div class="container">
     <h2><a href="http://cs50.edx.org/ap">Course | CS50AP | edX</a></h2>
-    <h4>COMING SOON</h4>
-        <!-- <h4>Lectures</h4>
-           <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/hardware">Hardware</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/internet">Internet</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/multimedia">Multimedia</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/security">Security</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/web_development">Web Development</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/programming">Programming</a></li>
--->
+    <h3>Problems for Required Units</h3>
+<h4>Unit 0:</h4>
+<ul>
+<li><a href="http://docs.cs50.net/2018/ap/problems/house/house.html">Around the House</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/tech/tech.html">Tech Spotlight</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/algorithms/algorithms.html">Everyday Algorithms</a></li>
+</ul>
+<h4>Unit 1:</h4>
+<ul>
+<li><a href="http://docs.cs50.net/2018/ap/problems/scratch/scratch.html">Scratch</a></li>
+
+<li><a href="http://docs.cs50.net/2018/ap/problems/hello/hello.html">Hello</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/fahrenheit/fahrenheit.html">Fahrenheit</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/cash/cash.html">Cash</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/pennies/pennies.html">Pennies</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/isbn/isbn.html">ISBN</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/mario/less/mario.html">Mario (less)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/mario/more/mario.html">Mario (more)(*)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/credit/credit.html">Credit(*)</a></li>
+</ul>
+<h4>Unit 2:</h4>
+<ul>
+  <li><a href="http://docs.cs50.net/2018/ap/problems/ui/ui.html">Me, Myself, and UI</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/reverse/reverse.html">Reverse Engineer(*)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/initials/less/initials.html">Initials (less)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/initials/more/initials.html">Initials (more)*</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/friends/friends.html">Old Friends - Hello</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/friends/friends.html">Old Friends - Fahrenheit</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/friends/friends.html">Old Friends - Pennies</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/calc/calc.html">Calc</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/caesar/caesar.html">Caesar</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/crack/crack.html">Crack(*)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/vigenere/vigenere.html">Vigenére</a></li>
+</ul>
+<h4>Unit 3:</h4>
+<ul>
+  <li><a href="http://docs.cs50.net/2018/ap/problems/find/less/find.html">Find (less)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/find/more/find.html">Find (more)*</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/fifteen/fifteen.html">Fifteen</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/race/race.html">Sort Race</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/analyze/analyze.html">Analyze This</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/scramble/1/scramble1.html">Scramble (Part 1)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/simulate/simulate.html">Simulate!</a></li>
+</ul>
+<h4>Unit 4:</h4>
+<ul>
+  <li><a href="http://docs.cs50.net/2018/ap/problems/sudoku/sudoku.html">Sudoku</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/finder/finder.html">Finder</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/music/music.html">Music</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/whodunit/whodunit.html">Whodunit</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/resize/less/resize.html">Resize (less)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/resize/more/resize.html">Resize (more)*</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/recover/recover.html">Recover</a></li>
+</ul>
+<h4>Unit 5:</h4>
+<ul>
+  <li><a href="http://docs.cs50.net/2018/ap/problems/defender/defender.html">Defender of the Web</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/unit5/unit5.html">"Unit5"</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Mario (less)</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Mario (more)</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Cash</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Caesar</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/similarities/less/similarities.html">Similarities (less)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/similarities/more/similarities.html">Similarities (more)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/finance/finance.html">C$50 Finance</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/mashup/mashup.html">Mashup</a></li>
+</ul>
+<h2>Optional Units (cannot be submitted)</h2>
+<h4>Unit A:</h4>
+<ul>
+  <li><a href="https://docs.cs50.net/2018/ap/problems/calc/2/calc.html">Calc 2.0</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/leaky/leaky.html">Leaky</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/autocomplete/autocomplete.html">Autocomplete</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/decisions/decisions.html">Decisions</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/mispellings/mispellings.html">Mispellings</a></li>
+</ul>
+<h4>Unit B:</h4>
+<ul>
+  <li><a href="">Blockdude</a></li>
+<li><a href="http://cdn.cs50.net/2012/fall/psets/6/pset6.pdf">Huff 'n Puff</a></li>
+<li><a href="">Degrees of Scalability</a></li>
+<li><a href="http://cdn.cs50.net/2015/fall/psets/6/pset6/pset6.html">Server</a></li>
+</ul>
 </div>
 </body>
 </html>
