--- a/cs50ap.html
+++ b/cs50ap.html
@@ -88,9 +88,9 @@
 </ul>
 <h4>Unit B:</h4>
 <ul>
-  <li><a href="">Blockdude</a></li>
+  <li><a>Blockdude</a></li>
 <li><a href="http://cdn.cs50.net/2012/fall/psets/6/pset6.pdf">Huff 'n Puff</a></li>
-<li><a href="">Degrees of Scalability</a></li>
+<li><a>Degrees of Scalability</a></li>
 <li><a href="http://cdn.cs50.net/2015/fall/psets/6/pset6/pset6.html">Server</a></li>
 </ul>
 </div>
