--- a/cs50ap.html
+++ b/cs50ap.html
@@ -69,11 +69,11 @@
   <li><a href="http://docs.cs50.net/2018/ap/problems/defender/defender.html">Defender of the Web</a></li>
 <li><a href="http://docs.cs50.net/2018/ap/problems/unit5/unit5.html">"Unit5"</a></li>
 <li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Mario (less)</a></li>
-<li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Mario (more)</a></li>
+<li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Mario (more)*</a></li>
 <li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Cash</a></li>
 <li><a href="https://docs.cs50.net/2018/ap/problems/sentimental/sentimental.html">Sentimental - Caesar</a></li>
 <li><a href="http://docs.cs50.net/2018/ap/problems/similarities/less/similarities.html">Similarities (less)</a></li>
-<li><a href="http://docs.cs50.net/2018/ap/problems/similarities/more/similarities.html">Similarities (more)</a></li>
+<li><a href="http://docs.cs50.net/2018/ap/problems/similarities/more/similarities.html">Similarities (more)*</a></li>
 <li><a href="http://docs.cs50.net/2018/ap/problems/finance/finance.html">C$50 Finance</a></li>
 <li><a href="http://docs.cs50.net/2018/ap/problems/mashup/mashup.html">Mashup</a></li>
 </ul>
