update cs50x for 2019 changes
2019 changes

--- a/cs50x.html
+++ b/cs50x.html
@@ -2,142 +2,133 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CS50x 2018 Quick Links</title>
+  <title>CS50x 2019 Quick Links</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css"
 </head>
 
 <body>
   <div class="container">
-    <h2><a href="https://courses.edx.org/courses/course-v1:HarvardX+CS50+X/course/">Course | CS50 | edX</a></h2>
+    <h2><a href="https://courses.edx.org/courses/course-v1:HarvardX+CS50+X/course/">Course | CS50x 2019 | edX</a></h2>
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/3oFAJtFE8YU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       <h3>Lectures</h3>
       <table class="table table-striped table-sm w-50">
         <tr>
-          <td>0: Scratch </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/0">Lecture</a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/0/lecture0.html">Notes</a></td>
+          <td>Week 0</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/0">Lecture</a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/0/notes">Notes</a></td>
         </tr>
         <tr>
-          <td>1: C </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/1">Lecture</a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/1/lecture1.html">Notes</a></td>
+          <td>Week 1</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/1">Lecture</a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/1/notes">Notes</a></td>
         </tr>
         <tr>
-          <td>2: C, Continued </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/2">Lecture</a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/2/lecture2.html">Notes</a></td>
+          <td>Week 2</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/2">Lecture</a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/2/notes">Notes</a></td>
         </tr>
-          <td>3: Algorithms </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/3">Lecture</a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/3/lecture3.html">Notes</a></td>
+          <td>Week 3</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/3">Lecture</a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/2/notes">Notes</a></td>
         </tr>
         <tr>
-          <td>4: Memory </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/4">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/4/lecture4.html">Notes</a></td>
+          <td>Week 4</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/4">Lecture </a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/4/notes">Notes</a></td>
 
         </tr>
         <tr>
-          <td>5: Data Structures </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/5">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/5/lecture5.html">Notes</a></td>
+          <td>Week 5</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/5">Lecture </a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/5/notes">Notes</a></td>
 
         </tr>
         <tr>
-          <td>6: HTTP </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/6">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/6/lecture6.html">Notes</a></td>
+          <td>Week 6</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/6">Lecture </a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/6/notes">Notes</a></td>
 
         </tr>
         <tr>
-          <td>7: Dynamic Programming </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/7">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/7/lecture7.html">Notes</a></td>
+          <td>Week 7</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/7">Lecture </a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/7/notes">Notes</a></td>
 
         </tr>
         <tr>
-          <td>8: Python </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/8">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/8/lecture8.html">Notes</a></td>
+          <td>Week 8</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/8">Lecture </a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/8/notes">Notes</a></td>
 
         </tr>
         <tr>
-          <td>9: Python, continued</td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/9">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/9/lecture9.html">Notes</a></td>
-
+          <td>Week 10</td>
+          <td><a href="http://video.cs50.net/2018/fall/lectures/9">Lecture </a></td>
+          <td><a href="https://cs50.harvard.edu/college/weeks/10/notes">Notes</a></td>
         </tr>
-         <tr>
-           <td>10: SQL </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/10">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/10/lecture10.html">Notes</a></td>
-
-         </tr>
-        <tr>
-          <td>11: JavaScript </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/11">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/11/lecture11.html">Notes</a></td>
-
-        </tr>
-        <tr>
-          <td>12: The End </td>
-          <td><a href="http://video.cs50.net/2017/fall/lectures/12">Lecture </a></td>
-          <td><a href="https://docs.cs50.net/2017/fall/notes/12/lecture12.html">Notes</a></td>
-
-        </tr>
+    
       </table>
 
-      <h3>Problem Sets</h3>
-      <ul class="list-unstyled">
-        <li><a href="https://docs.cs50.net/2018/x/psets/0/pset0.html">Problem Set 0</a></li>
-        <li><a href="https://docs.cs50.net/2018/x/psets/1/pset1.html">Problem Set 1</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/1/hello/hello.html">Hello</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/1/mario/less/mario.html">Mario-Less</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/1/mario/more/mario.html">Mario-More</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/1/cash/cash.html">Cash</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/1/credit/credit.html">Credit</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/2/pset2.html">Problem Set 2</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/2/caesar/caesar.html">Caesar</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/2/vigenere/vigenere.html">Vigenère</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/2/crack/crack.html">Crack</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/3/pset3.html">Problem Set 3</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/3/music/music.html">Music</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/4/pset4.html">Problem Set 4</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/4/whodunit/whodunit.html">Whodunit</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/4/resize/less/resize.html">Resize-Less</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/4/resize/more/resize.html">Resize-More</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/4/recover/recover.html">Recover</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/5/pset5.html">Problem Set 5</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/5/speller/speller.html">Speller</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/6/pset6.html">Problem Set 6</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/6/sentimental/sentimental">Sentimental</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/6/similarities/less/similarities.html">Similarities-Less</a></li>
-          <li><a href="https://docs.cs50.net/2018/x/psets/6/similarities/more/similarities.html">Similarities-More</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/7/pset7.html">Problem Set 7</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/7/finance/finance.html">C$50 Finance</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/8/pset8.html">Problem Set 8</a></li>
-        <ul>
-          <li><a href="https://docs.cs50.net/2018/x/psets/8/mashup/mashup.html">Mashup</a></li>
-        </ul>
-          <li><a href="https://docs.cs50.net/2018/x/project/project.html">Final Project</a></li>
-        </ul>
-      </ul>
+<h3>Problem Sets</h3>
+<ul class="list-unstyled">
+  <li><a href="https://docs.cs50.net/2019/x/psets/0/index.html">Problem Set 0</a></li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/1/index.html">Problem Set 1</a></li>
+  <ul>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/hello/">Hello</a></li>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/mario/less/">Mario-Less</a></li>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/mario/more/">Mario-More</a></li>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/cash/">Cash</a></li>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/credit/">Credit</a></li>
+  </ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/2/index.html">Problem Set 2</a></li>
+  <ul>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/caesar/">Caesar</a></li>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/vigenere/">Vigenère</a></li>
+    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/crack/">Crack</a></li>
+  </ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/3/index.html">Problem Set 3</a></li>
+    <ul>
+      <li><a href="https://https://lab.cs50.io/cs50/labs/2019/x/whodunit/">Whodunit</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/3/resize/less/resize.html">Resize-Less</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/3/resize/more/resize.html">Resize-More</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/3/recover/recover.html">Recover</a></li>
+    </ul>
+  
+    <li><a href="https://docs.cs50.net/2019/x/psets/4/index.html">Problem Set 4</a></li>
+  <ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/4/speller/speller.html">Speller</a></li>
+  </ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/5/index.html">Problem Set 5</a></li>
+    <ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/5/homepage/homepage.html">Homepage</a></li>
+    </ul>
+  <li><a href="https://docs.cs50.net/2019/x/psets/6/index.html">Problem Set 6</a></li>
+  <ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/hello/hello.html">Hello</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/mario/less/mario.html">Mario (Less)</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/mario/more/mario.html">Mario (More)</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/cash/cash.html">Cash</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/credit/credit.html">Credit</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/caesar/caesar.html">Caesar</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/vigenere/vigenere.html">Vigenere</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/crack/crack.html">Crack</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/6/bleep/bleep.html">Bleep</a></li>
+  </ul>
+
+  <li><a href="https://docs.cs50.net/2019/x/psets/7/index.html">Problem Set 7</a></li>  
+  <ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/7/similarities/similarities.html">Similarities</a></li>
+    <li><a href="https://docs.cs50.net/2019/x/psets/7/survey/survey.html">Survey</a></li>
+  </ul>
+  
+    <li><a href="https://docs.cs50.net/2019/x/psets/8/index.html">Problem Set 8</a></li>
+  <ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/8/finance/finance.html">C$50 Finance</a></li>
+  </ul>
+    <li><a href="https://docs.cs50.net/2019/x/project/project.html">Final Project</a></li>
+  </ul>
     </div>
 </body>
 </html>
