--- a/cs50x.html
+++ b/cs50x.html
@@ -74,6 +74,9 @@
 <h3>Problem Sets</h3>
 <ul class="list-unstyled">
   <li><a href="https://docs.cs50.net/2019/x/psets/0/index.html">Problem Set 0</a></li>
+  <ul>
+    <li><a href="https://docs.cs50.net/2019/x/psets/0/scratch.html">Scratch</a></li>
+  </ul>
   <li><a href="https://docs.cs50.net/2019/x/psets/1/index.html">Problem Set 1</a></li>
   <ul>
     <li><a href="https://lab.cs50.io/cs50/labs/2019/x/hello/">Hello</a></li>
