fix broken link

--- a/cs50x.html
+++ b/cs50x.html
@@ -93,7 +93,7 @@
   </ul>
     <li><a href="https://docs.cs50.net/2019/x/psets/3/index.html">Problem Set 3</a></li>
     <ul>
-      <li><a href="https://https://lab.cs50.io/cs50/labs/2019/x/whodunit/">Whodunit</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/whodunit/">Whodunit</a></li>
       <li><a href="https://docs.cs50.net/2019/x/psets/3/resize/less/resize.html">Resize-Less</a></li>
       <li><a href="https://docs.cs50.net/2019/x/psets/3/resize/more/resize.html">Resize-More</a></li>
       <li><a href="https://docs.cs50.net/2019/x/psets/3/recover/recover.html">Recover</a></li>
