--- a/cs50x.html
+++ b/cs50x.html
@@ -4,14 +4,12 @@
   <meta charset="utf-8">
   <title>CS50x 2019 Quick Links</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div class="container">
     <h2><a href="https://courses.edx.org/courses/course-v1:HarvardX+CS50+X/course/">Course | CS50x 2019 | edX</a></h2>
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/3oFAJtFE8YU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       <h3>Lectures</h3>
       <table class="table table-striped table-sm w-50">
         <tr>
@@ -29,6 +27,7 @@
           <td><a href="http://video.cs50.net/2018/fall/lectures/2">Lecture</a></td>
           <td><a href="https://cs50.harvard.edu/college/weeks/2/notes">Notes</a></td>
         </tr>
+        <tr>
           <td>Week 3</td>
           <td><a href="http://video.cs50.net/2018/fall/lectures/3">Lecture</a></td>
           <td><a href="https://cs50.harvard.edu/college/weeks/2/notes">Notes</a></td>
@@ -73,65 +72,71 @@
 
 <h3>Problem Sets</h3>
 <ul class="list-unstyled">
-  <li><a href="https://docs.cs50.net/2019/x/psets/0/index.html">Problem Set 0</a></li>
-  <ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/0/scratch.html">Scratch</a></li>
-  </ul>
-  <li><a href="https://docs.cs50.net/2019/x/psets/1/index.html">Problem Set 1</a></li>
-  <ul>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/hello/">Hello</a></li>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/mario/less/">Mario-Less</a></li>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/mario/more/">Mario-More</a></li>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/cash/">Cash</a></li>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/credit/">Credit</a></li>
-  </ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/2/index.html">Problem Set 2</a></li>
-  <ul>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/caesar/">Caesar</a></li>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/vigenere/">Vigenère</a></li>
-    <li><a href="https://lab.cs50.io/cs50/labs/2019/x/crack/">Crack</a></li>
-  </ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/3/index.html">Problem Set 3</a></li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/0/index.html">Problem Set 0</a>
+    <ul>
+      <li><a href="https://docs.cs50.net/2019/x/psets/0/scratch.html">Scratch</a></li>
+    </ul>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/1/index.html">Problem Set 1</a>
+    <ul>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/hello/">Hello</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/mario/less/">Mario-Less</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/mario/more/">Mario-More</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/cash/">Cash</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/credit/">Credit</a></li>
+    </ul>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/2/index.html">Problem Set 2</a>
+    <ul>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/caesar/">Caesar</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/vigenere/">Vigenère</a></li>
+      <li><a href="https://lab.cs50.io/cs50/labs/2019/x/crack/">Crack</a></li>
+    </ul>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/3/index.html">Problem Set 3</a>
     <ul>
       <li><a href="https://lab.cs50.io/cs50/labs/2019/x/whodunit/">Whodunit</a></li>
       <li><a href="https://docs.cs50.net/2019/x/psets/3/resize/less/resize.html">Resize-Less</a></li>
       <li><a href="https://docs.cs50.net/2019/x/psets/3/resize/more/resize.html">Resize-More</a></li>
       <li><a href="https://docs.cs50.net/2019/x/psets/3/recover/recover.html">Recover</a></li>
     </ul>
-  
-    <li><a href="https://docs.cs50.net/2019/x/psets/4/index.html">Problem Set 4</a></li>
-  <ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/4/speller/speller.html">Speller</a></li>
-  </ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/5/index.html">Problem Set 5</a></li>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/4/index.html">Problem Set 4</a>
     <ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/5/homepage/homepage.html">Homepage</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/4/speller/speller.html">Speller</a></li>
     </ul>
-  <li><a href="https://docs.cs50.net/2019/x/psets/6/index.html">Problem Set 6</a></li>
-  <ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/hello/hello.html">Hello</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/mario/less/mario.html">Mario (Less)</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/mario/more/mario.html">Mario (More)</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/cash/cash.html">Cash</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/credit/credit.html">Credit</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/caesar/caesar.html">Caesar</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/vigenere/vigenere.html">Vigenere</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/crack/crack.html">Crack</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/6/bleep/bleep.html">Bleep</a></li>
-  </ul>
-
-  <li><a href="https://docs.cs50.net/2019/x/psets/7/index.html">Problem Set 7</a></li>  
-  <ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/7/similarities/similarities.html">Similarities</a></li>
-    <li><a href="https://docs.cs50.net/2019/x/psets/7/survey/survey.html">Survey</a></li>
-  </ul>
-  
-    <li><a href="https://docs.cs50.net/2019/x/psets/8/index.html">Problem Set 8</a></li>
-  <ul>
-    <li><a href="https://docs.cs50.net/2019/x/psets/8/finance/finance.html">C$50 Finance</a></li>
-  </ul>
-    <li><a href="https://docs.cs50.net/2019/x/project/project.html">Final Project</a></li>
-  </ul>
-    </div>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/5/index.html">Problem Set 5</a>
+    <ul>
+      <li><a href="https://docs.cs50.net/2019/x/psets/5/homepage/homepage.html">Homepage</a></li>
+    </ul>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/6/index.html">Problem Set 6</a>
+    <ul>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/hello/hello.html">Hello</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/mario/less/mario.html">Mario (Less)</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/mario/more/mario.html">Mario (More)</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/cash/cash.html">Cash</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/credit/credit.html">Credit</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/caesar/caesar.html">Caesar</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/vigenere/vigenere.html">Vigenere</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/sentimental/crack/crack.html">Crack</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/6/bleep/bleep.html">Bleep</a></li>
+    </ul>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/psets/7/index.html">Problem Set 7</a>
+    <ul>
+      <li><a href="https://docs.cs50.net/2019/x/psets/7/similarities/similarities.html">Similarities</a></li>
+      <li><a href="https://docs.cs50.net/2019/x/psets/7/survey/survey.html">Survey</a></li>
+    </ul>
+  </li>  
+  <li><a href="https://docs.cs50.net/2019/x/psets/8/index.html">Problem Set 8</a>
+    <ul>
+      <li><a href="https://docs.cs50.net/2019/x/psets/8/finance/finance.html">C$50 Finance</a></li>
+    </ul>
+  </li>
+  <li><a href="https://docs.cs50.net/2019/x/project/project.html">Final Project</a></li>
+</ul>
+</div>
 </body>
 </html>
