--- a/cs50t.html
+++ b/cs50t.html
@@ -4,21 +4,22 @@
   <meta charset="utf-8">
   <title>CS50T 2018 Quick Links</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div class="container">
     <h2><a href="http://cs50.edx.org/technology">Course | CS50T | edX</a></h2>
 
-        <h4>Lectures</h4>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/hardware">Hardware</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/internet">Internet</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/multimedia">Multimedia</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/security">Security</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/web_development">Web Development</a></li>
-            <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/programming">Programming</a></li>
-
+    <h3>Lectures</h3>
+    <ul>
+      <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/hardware">Hardware</a></li>
+      <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/internet">Internet</a></li>
+      <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/multimedia">Multimedia</a></li>
+      <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/security">Security</a></li>
+      <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/web_development">Web Development</a></li>
+      <li><a href="https://video.cs50.net/cscie1a/2017/fall/lectures/programming">Programming</a></li>
+    </ul>
 </div>
 </body>
 </html>
