--- a/cs50g.html
+++ b/cs50g.html
@@ -4,40 +4,42 @@
   <meta charset="utf-8">
   <title>CS50G 2018 Quick Links</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div class="container">
     <h2><a href="http://cs50.edx.org/games">Course | CS50G | edX</a></h2>
 
-        <h4>Lectures</h4>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/0">Lecture 0: Pong</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/1">Lecture 1: Flappy Bird</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/2">Lecture 2: Breakout</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/3">Lecture 3: Match 3</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/4">Lecture 4: Super Mario Bros.</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/5">Lecture 5: Legend of Zelda</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/6">Lecture 6: Angry Birds</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/7">Lecture 7: Pokémon</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/8">Lecture 8: 3D Helicopter Game</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/9">Lecture 9: Dreadhalls</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/10">Lecture 10: Portal</a></li>
-            <li><a href="http://video.cs50.net/games/2018/spring/lectures/11">Lecture 11: Portal Problems</a></li>
-
-        <h4>Assignments</h4>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/0/assignment0.html">Assignment 0: “Pong, The AI Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/1/assignment1.html">Assignment 1: “Flappy Bird, The Reward Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/2/assignment2.html">Assignment 2: “Breakout, The Powerup Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/3/assignment3.html">Assignment 3: “Match-3, The Shiny Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/4/assignment4.html">Assignment 4: “Super Mario Bros., The Key and Lock Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/5/assignment5.html">Assignment 5: “Legend of Zelda, The Pot Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/6/assignment6.html">Assignment 6: “Angry Birds, The Tri-Shot Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/7/assignment7.html">Assignment 7: “Pokémon, The Level-Up Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/8/assignment8.html">Assignment 8: “Helicopter Game 3D, The Gem Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/9/assignment9.html">Assignment 9: “Dreadhalls, The Tumble Update”</a></li>
-            <li><a href="https://docs.cs50.net/games/2018/x/assignments/10/assignment10.html">Assignment 10: “Portal, The ProBuilder Update”</a></li>
-
+        <h3>Lectures</h3>
+    <ul>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/0">Lecture 0: Pong</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/1">Lecture 1: Flappy Bird</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/2">Lecture 2: Breakout</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/3">Lecture 3: Match 3</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/4">Lecture 4: Super Mario Bros.</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/5">Lecture 5: Legend of Zelda</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/6">Lecture 6: Angry Birds</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/7">Lecture 7: Pokémon</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/8">Lecture 8: 3D Helicopter Game</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/9">Lecture 9: Dreadhalls</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/10">Lecture 10: Portal</a></li>
+      <li><a href="http://video.cs50.net/games/2018/spring/lectures/11">Lecture 11: Portal Problems</a></li>
+    </ul>
+        <h3>Assignments</h3>
+    <ul>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/0/assignment0.html">Assignment 0: “Pong, The AI Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/1/assignment1.html">Assignment 1: “Flappy Bird, The Reward Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/2/assignment2.html">Assignment 2: “Breakout, The Powerup Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/3/assignment3.html">Assignment 3: “Match-3, The Shiny Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/4/assignment4.html">Assignment 4: “Super Mario Bros., The Key and Lock Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/5/assignment5.html">Assignment 5: “Legend of Zelda, The Pot Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/6/assignment6.html">Assignment 6: “Angry Birds, The Tri-Shot Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/7/assignment7.html">Assignment 7: “Pokémon, The Level-Up Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/8/assignment8.html">Assignment 8: “Helicopter Game 3D, The Gem Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/9/assignment9.html">Assignment 9: “Dreadhalls, The Tumble Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2018/x/assignments/10/assignment10.html">Assignment 10: “Portal, The ProBuilder Update”</a></li>
+    </ul>
 
 
 
