--- a/cs50m.html
+++ b/cs50m.html
@@ -4,34 +4,36 @@
   <meta charset="utf-8">
   <title>CS50M 2018 Quick Links</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div class="container">
     <h2><a href="http://cs50.edx.org/mobile">Course | CS50M | edX</a></h2>
 
-        <h4>Lectures</h4>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/0">Lecture 0: Overview, Javascript</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/1">Lecture 1: Javascript, ES</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/2">Lecture 2: React, Props, State</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/3">Lecture 3: React Native</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/4">Lecture 4: Lists, User Input</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/5">Lecture 5: User Input, Debugging</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/6">Lecture 6: Navigation</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/7">Lecture 7: Data</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/8">Lecture 8: Expo Components</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/9">Lecture 9: Redux</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/10">Lecture 10: Async Redux, Tools</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/11">Lecture 11: Performance</a></li>
-            <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/12">Lecture 12: Deploying, Testing</a></li>
-
-        <h4>Projects</h4>
-            <li><a href="https://docs.cs50.net/mobile/2018/x/projects/0/project0.html">Project 0: TODO App</a></li>
-            <li><a href="https://docs.cs50.net/mobile/2018/x/projects/1/project1.html">Project 1: Pomodoro Timer</a></li>
-            <li><a href="https://docs.cs50.net/mobile/2018/x/projects/2/project2.html">Project 2: Movie Browser</a></li>
-            <li><a href="https://docs.cs50.net/mobile/2018/x/projects/final/final.html">Final Project: Self-Designed App</a></li>
-
+        <h3>Lectures</h3>
+    <ul>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/0">Lecture 0: Overview, Javascript</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/1">Lecture 1: Javascript, ES</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/2">Lecture 2: React, Props, State</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/3">Lecture 3: React Native</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/4">Lecture 4: Lists, User Input</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/5">Lecture 5: User Input, Debugging</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/6">Lecture 6: Navigation</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/7">Lecture 7: Data</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/8">Lecture 8: Expo Components</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/9">Lecture 9: Redux</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/10">Lecture 10: Async Redux, Tools</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/11">Lecture 11: Performance</a></li>
+      <li><a href="http://video.cs50.net/mobile/2018/spring/lectures/12">Lecture 12: Deploying, Testing</a></li>
+    </ul>
+        <h3>Projects</h3>
+    <ul>
+      <li><a href="https://docs.cs50.net/mobile/2018/x/projects/0/project0.html">Project 0: TODO App</a></li>
+      <li><a href="https://docs.cs50.net/mobile/2018/x/projects/1/project1.html">Project 1: Pomodoro Timer</a></li>
+      <li><a href="https://docs.cs50.net/mobile/2018/x/projects/2/project2.html">Project 2: Movie Browser</a></li>
+      <li><a href="https://docs.cs50.net/mobile/2018/x/projects/final/final.html">Final Project: Self-Designed App</a></li>
+    </ul>
 </div>
 </body>
 </html>
