update games (add final project)

--- a/cs50g.html
+++ b/cs50g.html
@@ -39,6 +39,7 @@
       <li><a href="https://docs.cs50.net/games/2019/x/assignments/8/assignment8.html">Assignment 8: “Helicopter Game 3D, The Gem Update”</a></li>
       <li><a href="https://docs.cs50.net/games/2019/x/assignments/9/assignment9.html">Assignment 9: “Dreadhalls, The Tumble Update”</a></li>
       <li><a href="https://docs.cs50.net/games/2019/x/assignments/10/assignment10.html">Assignment 10: “Portal, The ProBuilder Update”</a></li>
+      <li><a href="https://docs.cs50.net/games/2019/x/project/project.html">Final Project</a></li>
     </ul>
 
 
