--- a/ocw.html
+++ b/ocw.html
@@ -2,7 +2,7 @@
 <html lang=en>
     <head>
         <meta charset="utf-8">
-        <title>CS50 Courses on edX</title>
+        <title>CS50 Open Courseware</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
